// Vitest Snapshot v1

exports[`views:HomePage > renders correctly - with prop 1`] = `
<div>
  <h1>
    Hello World!
  </h1>
</div>
`;

exports[`views:HomePage > renders correctly 1`] = `
<div>
  <h1>
    Hades - Randomizer
  </h1>
</div>
`;
